syntax = "proto3";

option csharp_namespace = "PostPigeon.Server";

package auth;

service Auth {
  rpc Login (LoginRequest) returns (TokenPair);
  rpc Register (RegisterRequest) returns (TokenPair);
  rpc RefreshToken (RefreshTokenRequest) returns (TokenPair);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message TokenPair {
  string access_token = 1;
  string refresh_token = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}